--- a/Unity/Assembly-CSharp.csproj
+++ b/Unity/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Pathfinder_Clock\Scripts\Tile\Tile.cs" />
     <Compile Include="Assets\Pathfinder_Clock\Scripts\Tile\Wall.cs" />
     <Compile Include="Assets\Pathfinder_Clock\Scripts\TileMapPlayerController.cs" />
+    <Compile Include="Assets\Scripts\Manager\CameraManager.cs" />
     <Compile Include="Assets\Scripts\Manager\ChaosManager.cs" />
     <Compile Include="Assets\Scripts\Manager\ClockManager.cs" />
     <Compile Include="Assets\Scripts\Manager\GameInstance.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="Assets\Scripts\Manager\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
     <Compile Include="Assets\Scripts\Sc_Chara_Interface.cs" />
+    <Compile Include="Assets\Scripts\Sc_InputController.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\Pathfinder_Clock\QuickOutline\Resources\Shaders\OutlineFill.shader" />
