--- a/Unity/Assembly-CSharp.csproj
+++ b/Unity/Assembly-CSharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\Scripts\Manager\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
     <Compile Include="Assets\Scripts\Sc_Chara_Interface.cs" />
+    <Compile Include="Assets\Scripts\Sc_InputController.cs" />
     <Compile Include="Assets\Scripts\Sc_PlayerData.cs" />
     <Compile Include="Assets\Scripts\Sc_Skill.cs" />
     <Compile Include="Assets\Scripts\Scriptable_Charaspec.cs" />
