--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 Unity/Library/EditorInstance.json
+
+Unity/Library/CurrentLayout-default.dwlt
+
+Unity/Library/StateCache/Hierarchy/258067-mainStage.json
+
+Unity/Library/StateCache/SceneView/f15b34-mainStage.json
